name:                sasher
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/sasher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
                        , Auth
                        , API
                        , Sql
                        , Sql.Sessions
                        , Sql.Users
                        , Sql.Utils
                        , Sql.Init
                        , Types
                        , Test
  build-depends:        base >= 4.7 && < 5
                        , aeson
                        , servant-server
                        , servant
                        , wai
                        , warp
                        , http-types
                        , time
                        , either
                        , HDBC
                        , HDBC-sqlite3
                        , transformers
                        , text
                        , mtl
                        , base64-bytestring
                        , entropy
                        , bcrypt
                        , bytestring
                        , bytestring-conversion
                        , cookie
  default-language:    Haskell2010

executable sasher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sasher
  default-language:    Haskell2010

test-suite sasher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sasher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sasher
